# O3DViewer-Tauri

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
scripts/: prepare-viewer.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
